# QmlConventionChecker

./: CMakeLists.txt  QmlAst.pro  README.md  checkingvisitor.cpp  checkingvisitor.h  main.cpp
src/: CMakeLists.txt  checker.cpp  checker.h  checkingvisitor.cpp  checkingvisitor.h  main.cpp  qmlprivates.h
tst/: CMakeLists.txt  QmlAstUnitTest.cpp  invalid1.qml  invalid2.qml  invalid3.qml  invalid4.qml  invalid5.qml  invalid6.qml  invalid7.qml  valid.qml
